--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         <!--/.bg-holder-->
 
         <div class="container">
-          <h1 class="fs-9 fw-bold mb-4 text-center"> We design tools to unveil <br class="d-none d-xl-block" />your superpowers</h1>
+          <!--<h1 class="fs-9 fw-bold mb-4 text-center"> We design tools to unveil <br class="d-none d-xl-block" />your superpowers</h1>-->
+          <h1 class="fs-9 fw-bold mb-4 text-center"> we dedicate to unleashing <br class="d-none d-xl-block" />your superpowers</h1>
           <div class="row">
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon1.png" width="75" alt="Feature" />
               <h4 class="mb-3">First click tests</h4>
