--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
           <h1 class="fs-9 fw-bold mb-4 text-center"> We dedicate to unleashing <br class="d-none d-xl-block" />your superpowers</h1>
           <div class="row">
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon1.png" width="75" alt="Feature" />
-              <h4 class="mb-3">First click tests</h4>
+              <h4 class="mb-3">Product Research</h4>
               <p class="mb-0 fw-medium text-secondary">While most people enjoy casino gambling,</p>
             </div>
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon2.png" width="75" alt="Feature" />
-              <h4 class="mb-3">Design surveys</h4>
+              <h4 class="mb-3">Order</h4>
               <p class="mb-0 fw-medium text-secondary">Sports betting,lottery and bingo playing for the fun</p>
             </div>
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon3.png" width="75" alt="Feature" />
-              <h4 class="mb-3">Preference tests</h4>
+              <h4 class="mb-3">Fulfilment</h4>
               <p class="mb-0 fw-medium text-secondary">The Myspace page defines the individual.</p>
             </div>
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon4.png" width="75" alt="Feature" />
-              <h4 class="mb-3">Five second tests</h4>
+              <h4 class="mb-3">Return</h4>
               <p class="mb-0 fw-medium text-secondary">Personal choices and the overall personality of the person.</p>
             </div>
           </div>
