--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <h1 class="fs-9 fw-bold mb-4 text-center"> We dedicate to unleashing <br class="d-none d-xl-block" />your superpowers</h1>
           <div class="row">
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon1.png" width="75" alt="Feature" />
-              <h4 class="mb-3">Product Research</h4>
+              <h4 class="mb-3">Winning Products</h4>
               <p class="mb-0 fw-medium text-secondary">While most people enjoy casino gambling,</p>
             </div>
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon2.png" width="75" alt="Feature" />
