--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta content="" name="keywords">
     <link href="https://www.gudaoweb.com/assets/img/favicon.png" rel="icon">
     <link href="https://www.gudaoweb.com/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="./assets/css" rel="stylesheet">
-    <link href="./assets/aos.css" rel="stylesheet">
+    <link href="./assets/css/css" rel="stylesheet">
+    <link href="./assets/css/aos.css" rel="stylesheet">
     <link href="./assets/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/bootstrap-icons.css" rel="stylesheet">
     <link href="./assets/glightbox.min.css" rel="stylesheet">
