--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <link href="https://www.gudaoweb.com/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="./assets/css/css" rel="stylesheet">
     <link href="./assets/css/aos.css" rel="stylesheet">
-    <link href="./assets/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/bootstrap-icons.css" rel="stylesheet">
-    <link href="./assets/glightbox.min.css" rel="stylesheet">
-    <link href="./assets/remixicon.css" rel="stylesheet">
-    <link href="./assets/swiper-bundle.min.css" rel="stylesheet">
-    <link href="./assets/style.css" rel="stylesheet">
-    <script src="./assets/jquery11.min.js"></script>
-    <script type="text/javascript" src="./assets/i18n.js"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/slick.css">
-    <link rel="stylesheet" type="text/css" href="./assets/slick-theme.css">
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/css/bootstrap-icons.css" rel="stylesheet">
+    <link href="./assets/css/glightbox.min.css" rel="stylesheet">
+    <link href="./assets/css/remixicon.css" rel="stylesheet">
+    <link href="./assets/css/swiper-bundle.min.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
+    <script src="./assets/js/jquery11.min.js"></script>
+    <script type="text/javascript" src="./assets/js/i18n.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/slick-theme.css">
 </head>
 
 <body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0" data-new-gr-c-s-check-loaded="14.1231.0" data-gr-ext-installed="">
@@ -27,7 +27,7 @@
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
             <a href="https://www.gudaoweb.com/index.html" class="logo d-flex align-items-center">
-                <img src="./assets/logo.png" alt="">
+                <img src="./assets/img/logo.png" alt="">
             </a>
             <nav id="navbar" class="navbar">
                 <ul>
@@ -446,21 +446,21 @@
         </footer>
     </div>
     <a href="https://www.gudaoweb.com/#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-    <script src="./assets/purecounter_vanilla.js"></script>
-    <script src="./assets/aos.js"></script>
-    <script src="./assets/bootstrap.bundle.min.js"></script>
-    <script src="./assets/glightbox.min.js"></script>
-    <script src="./assets/isotope.pkgd.min.js"></script>
-    <script src="./assets/swiper-bundle.min.js"></script>
-    <script src="./assets/validate.js"></script>
+    <script src="./assets/js/purecounter_vanilla.js"></script>
+    <script src="./assets/js/aos.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/glightbox.min.js"></script>
+    <script src="./assets/js/isotope.pkgd.min.js"></script>
+    <script src="./assets/js/swiper-bundle.min.js"></script>
+    <script src="./assets/js/validate.js"></script>
     <!-- 动态调整字体大小 -->
-    <script src="./assets/adjustFontSize.js"></script>
+    <script src="./assets/js/adjustFontSize.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="./assets/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="./assets/slick.js" type="text/javascript"></script>
-    <script src="./assets/main.js"></script>
-    <script src="./assets/slider_card.js"></script>
+    <script src="./assets/js/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="./assets/js/slick.js" type="text/javascript"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/slider_card.js"></script>
 
 
 <script>
