Update company name and image paths in index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- saved from url=(0025)https://www.gudaoweb.com/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title data-i18n="key65" placeholder="上海古道商务咨询有限公司" title="上海古道商务咨询有限公司">上海古道商务咨询有限公司</title>
+    <title data-i18n="key65" placeholder="合肥一路发发电子商务有限公司" title="上海古道商务咨询有限公司">合肥一路发发电子商务有限公司</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="https://www.gudaoweb.com/assets/img/favicon.png" rel="icon">
@@ -37,7 +36,7 @@
                     <li><a class="nav-link scrollto" href="https://www.gudaoweb.com/#testimonials" data-i18n="key4" placeholder="团队风采" title="团队风采">团队风采</a></li>
                     <li><a class="nav-link scrollto" href="https://www.gudaoweb.com/#pricing" data-i18n="key5" placeholder="加入我们" title="加入我们">加入我们</a></li>
                     <li class="dropdown"><a>
-                            <i18n data-i18n="key6" placeholder="&lt;img src=&quot;assets/img/icons8-中国-24.png&quot;&gt;" title="&lt;img src=&quot;assets/img/icons8-中国-24.png&quot;&gt;"><img src="./assets/icons8-中国-24.png"></i18n>
+                            <i18n data-i18n="key6" placeholder="&lt;img src=&quot;./assets/img/icons8-中国-24.png&quot;&gt;" title="&lt;img src=&quot;assets/img/icons8-中国-24.png&quot;&gt;"><img src="./assets/icons8-中国-24.png"></i18n>
                             <i class="bi bi-chevron-down"></i>
                         </a>
                         <ul>
@@ -52,7 +51,7 @@
         </div>
     </header>
     <!-- 首页banner -->
-    <section id="hero" class="hero d-flex align-items-center" style="background: url(&quot;assets/img/主页2.jpg&quot;) center top / cover no-repeat;">
+    <section id="hero" class="hero d-flex align-items-center" style="background: url(&quot;./assets/img/主页2.jpg&quot;) center top / cover no-repeat;">
     </section>
 
     <!-- 公司营实力展示 -->
