--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </header>
     <!-- 首页banner -->
-    <section id="hero" class="hero d-flex align-items-center" style="background: url(&quot;./assets/img/主页2.jpg&quot;) center top / cover no-repeat;">
+    <section id="hero" class="hero d-flex align-items-center" style="background: url(&quot;./assets/img/company background.jpg&quot;) center top / cover no-repeat;">
     </section>
 
     <!-- 公司营实力展示 -->
