Update title and language icons in index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title data-i18n="key65" placeholder="合肥一路发发电子商务有限公司" title="上海古道商务咨询有限公司">合肥一路发发电子商务有限公司</title>
+    <title data-i18n="key65" placeholder="合肥一路发发电子商务有限公司" title="合肥一路发发电子商务有限公司">合肥一路发发电子商务有限公司</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <link href="https://www.gudaoweb.com/assets/img/favicon.png" rel="icon">
-    <link href="https://www.gudaoweb.com/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="./assets/img/favicon.png" rel="icon">
+    <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="./assets/css/css" rel="stylesheet">
     <link href="./assets/css/aos.css" rel="stylesheet">
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
@@ -40,9 +40,9 @@
                             <i class="bi bi-chevron-down"></i>
                         </a>
                         <ul>
-                            <li onclick="setLanguage(&#39;cn&#39;)" style="cursor: pointer;"><span style="font-weight: 700;font-size: 17px;">中文</span>&nbsp;&nbsp;<img src="./assets/icons8-中国-24.png" style="margin-top: -4px;"></li>
-                            <li onclick="setLanguage(&#39;en&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">英文</span>&nbsp;&nbsp;<img src="./assets/icons8-美国-24.png" style="margin-top: -3px;"></li>
-                            <li onclick="setLanguage(&#39;jp&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">日文</span>&nbsp;&nbsp;<img src="./assets/icons8-日本-24.png" style="margin-top: -3px;"></li>
+                            <li onclick="setLanguage(&#39;cn&#39;)" style="cursor: pointer;"><span style="font-weight: 700;font-size: 17px;">中文</span>&nbsp;&nbsp;<img src="./assets/icons8-china-24.png" style="margin-top: -4px;"></li>
+                            <li onclick="setLanguage(&#39;en&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">英文</span>&nbsp;&nbsp;<img src="./assets/icons8-US-24.png" style="margin-top: -3px;"></li>
+                            <li onclick="setLanguage(&#39;jp&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">日文</span>&nbsp;&nbsp;<img src="./assets/icons8-JP-24.png" style="margin-top: -3px;"></li>
                         </ul>
                     </li>
                 </ul>
