--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a class="nav-link scrollto" href="https://www.gudaoweb.com/#testimonials" data-i18n="key4" placeholder="团队风采" title="团队风采">团队风采</a></li>
                     <li><a class="nav-link scrollto" href="https://www.gudaoweb.com/#pricing" data-i18n="key5" placeholder="加入我们" title="加入我们">加入我们</a></li>
                     <li class="dropdown"><a>
-                            <i18n data-i18n="key6" placeholder="&lt;img src=&quot;./assets/img/icons8-中国-24.png&quot;&gt;" title="&lt;img src=&quot;assets/img/icons8-中国-24.png&quot;&gt;"><img src="./assets/icons8-中国-24.png"></i18n>
+                            <i18n data-i18n="key6" placeholder="&lt;img src=&quot;./assets/img/icons8-china-24.png&quot;&gt;" title="&lt;img src=&quot;assets/img/icons8-china-24.png&quot;&gt;"><img src="./assets/icons8-china-24.png"></i18n>
                             <i class="bi bi-chevron-down"></i>
                         </a>
                         <ul>
