Replace company background image with building image

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div id="companyProfileLeftDesc" data-i18n="key68" placeholder="&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;上海古道商务咨询有限公司创立于2010年，是一家专注于拓展海外市场的跨境电子商务企业。公司致力于为海外客户提供高品质的商品，涵盖数码电子、摩配汽配、鞋服箱包、美容日化、家电家居等多个领域。我们的业务网络遍布eBay、Amazon、Walmart、Shopee、独立站、Temu、TikTok等多元化的国际电子商务平台。自成立以来，我们成功拓展了欧洲、美国、东南亚、日本等海外市场，并在国内建立了优秀专业团队，主要驻扎于上海、武汉、长沙、深圳和合肥。为提升服务品质，我们逐步在浙江、广东、印尼、菲律宾设立了自营仓库。我们将秉持初心，持续为客户创造卓越价值，努力成为行业的领军者。" title="&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;上海古道商务咨询有限公司创立于2010年，是一家专注于拓展海外市场的跨境电子商务企业。公司致力于为海外客户提供高品质的商品，涵盖数码电子、摩配汽配、鞋服箱包、美容日化、家电家居等多个领域。我们的业务网络遍布eBay、Amazon、Walmart、Shopee、独立站、Temu、TikTok等多元化的国际电子商务平台。自成立以来，我们成功拓展了欧洲、美国、东南亚、日本等海外市场，并在国内建立了优秀专业团队，主要驻扎于上海、武汉、长沙、深圳和合肥。为提升服务品质，我们逐步在浙江、广东、印尼、菲律宾设立了自营仓库。我们将秉持初心，持续为客户创造卓越价值，努力成为行业的领军者。">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上海古道商务咨询有限公司创立于2010年，是一家专注于拓展海外市场的跨境电子商务企业。公司致力于为海外客户提供高品质的商品，涵盖数码电子、摩配汽配、鞋服箱包、美容日化、家电家居等多个领域。我们的业务网络遍布eBay、Amazon、Walmart、Shopee、独立站、Temu、TikTok等多元化的国际电子商务平台。自成立以来，我们成功拓展了欧洲、美国、东南亚、日本等海外市场，并在国内建立了优秀专业团队，主要驻扎于上海、武汉、长沙、深圳和合肥。为提升服务品质，我们逐步在浙江、广东、印尼、菲律宾设立了自营仓库。我们将秉持初心，持续为客户创造卓越价值，努力成为行业的领军者。</div>
             </div>
             <div id="companyProfileRight">
-                <img src="./assets/company background.jpg" alt="">
+                <img src="./assets/building.jpg" alt="">
             </div>
         </div>
     </div>
