--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     <li><a class="nav-link scrollto" href="https://www.gudaoweb.com/#testimonials" data-i18n="key4" placeholder="团队风采" title="团队风采">团队风采</a></li>
                     <li><a class="nav-link scrollto" href="https://www.gudaoweb.com/#pricing" data-i18n="key5" placeholder="加入我们" title="加入我们">加入我们</a></li>
                     <li class="dropdown"><a>
-                            <i18n data-i18n="key6" placeholder="&lt;img src=&quot;./assets/img/icons8-china-24.png&quot;&gt;" title="&lt;img src=&quot;assets/img/icons8-china-24.png&quot;&gt;"><img src="./assets/icons8-china-24.png"></i18n>
+                            <i18n data-i18n="key6" placeholder="&lt;img src=&quot;./assets/img/icons8-china-24.png&quot;&gt;" title="&lt;img src=&quot;assets/img/icons8-china-24.png&quot;&gt;"><img src="./assets/img/icons8-china-24.png"></i18n>
                             <i class="bi bi-chevron-down"></i>
                         </a>
                         <ul>
-                            <li onclick="setLanguage(&#39;cn&#39;)" style="cursor: pointer;"><span style="font-weight: 700;font-size: 17px;">中文</span>&nbsp;&nbsp;<img src="./assets/icons8-china-24.png" style="margin-top: -4px;"></li>
-                            <li onclick="setLanguage(&#39;en&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">英文</span>&nbsp;&nbsp;<img src="./assets/icons8-US-24.png" style="margin-top: -3px;"></li>
-                            <li onclick="setLanguage(&#39;jp&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">日文</span>&nbsp;&nbsp;<img src="./assets/icons8-JP-24.png" style="margin-top: -3px;"></li>
+                            <li onclick="setLanguage(&#39;cn&#39;)" style="cursor: pointer;"><span style="font-weight: 700;font-size: 17px;">中文</span>&nbsp;&nbsp;<img src="./assets/img/icons8-china-24.png" style="margin-top: -4px;"></li>
+                            <li onclick="setLanguage(&#39;en&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">英文</span>&nbsp;&nbsp;<img src="./assets/img/icons8-US-24.png" style="margin-top: -3px;"></li>
+                            <li onclick="setLanguage(&#39;jp&#39;)" style="cursor: pointer;margin-top: 8px;"><span style="font-weight: 700;font-size: 17px;">日文</span>&nbsp;&nbsp;<img src="./assets/img/icons8-JP-24.png" style="margin-top: -3px;"></li>
                         </ul>
                     </li>
                 </ul>
