--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div id="companyProfileLeftDesc" data-i18n="key68" placeholder="&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;上海古道商务咨询有限公司创立于2010年，是一家专注于拓展海外市场的跨境电子商务企业。公司致力于为海外客户提供高品质的商品，涵盖数码电子、摩配汽配、鞋服箱包、美容日化、家电家居等多个领域。我们的业务网络遍布eBay、Amazon、Walmart、Shopee、独立站、Temu、TikTok等多元化的国际电子商务平台。自成立以来，我们成功拓展了欧洲、美国、东南亚、日本等海外市场，并在国内建立了优秀专业团队，主要驻扎于上海、武汉、长沙、深圳和合肥。为提升服务品质，我们逐步在浙江、广东、印尼、菲律宾设立了自营仓库。我们将秉持初心，持续为客户创造卓越价值，努力成为行业的领军者。" title="&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;上海古道商务咨询有限公司创立于2010年，是一家专注于拓展海外市场的跨境电子商务企业。公司致力于为海外客户提供高品质的商品，涵盖数码电子、摩配汽配、鞋服箱包、美容日化、家电家居等多个领域。我们的业务网络遍布eBay、Amazon、Walmart、Shopee、独立站、Temu、TikTok等多元化的国际电子商务平台。自成立以来，我们成功拓展了欧洲、美国、东南亚、日本等海外市场，并在国内建立了优秀专业团队，主要驻扎于上海、武汉、长沙、深圳和合肥。为提升服务品质，我们逐步在浙江、广东、印尼、菲律宾设立了自营仓库。我们将秉持初心，持续为客户创造卓越价值，努力成为行业的领军者。">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上海古道商务咨询有限公司创立于2010年，是一家专注于拓展海外市场的跨境电子商务企业。公司致力于为海外客户提供高品质的商品，涵盖数码电子、摩配汽配、鞋服箱包、美容日化、家电家居等多个领域。我们的业务网络遍布eBay、Amazon、Walmart、Shopee、独立站、Temu、TikTok等多元化的国际电子商务平台。自成立以来，我们成功拓展了欧洲、美国、东南亚、日本等海外市场，并在国内建立了优秀专业团队，主要驻扎于上海、武汉、长沙、深圳和合肥。为提升服务品质，我们逐步在浙江、广东、印尼、菲律宾设立了自营仓库。我们将秉持初心，持续为客户创造卓越价值，努力成为行业的领军者。</div>
             </div>
             <div id="companyProfileRight">
-                <img src="./assets/building.jpg" alt="">
+                <img src="./assets/img/building.jpg" alt="">
             </div>
         </div>
     </div>
@@ -176,19 +176,19 @@
                 <div class="row1 gy-4 aos-init aos-animate" style=" margin-bottom: 20px;">
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/男女服装.png" alt="" class="counts-img">
+                            <img src="./assets/img/男女服装.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key29" placeholder="男女服装" title="男女服装" style="font-size: 20px;">男女服装</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/服饰配饰.png" alt="" class="counts-img">
+                            <img src="./assets/img/服饰配饰.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key30" placeholder="服饰配饰" title="服饰配饰" style="font-size: 20px;">服饰配饰</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/家居家具.png" alt="" class="counts-img">
+                            <img src="./assets/img/家居家具.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key31" placeholder="家居家具" title="家居家具" style="font-size: 20px;">家居家具</p>
                         </div>
                     </div>
@@ -196,19 +196,19 @@
                 <div class="row1 gy-4 aos-init aos-animate" style=" margin-bottom: 20px;">
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/美妆个护.png" alt="" class="counts-img">
+                            <img src="./assets/img/美妆个护.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key32" placeholder="美妆个护" title="美妆个护" style="font-size: 20px;">美妆个护</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/汽车配件.png" alt="" class="counts-img">
+                            <img src="./assets/img/汽车配件.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key33" placeholder="汽车配件" title="汽车配件" style="font-size: 20px;">汽车配件</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/运动户外.png" alt="" class="counts-img">
+                            <img src="./assets/img/运动户外.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key34" placeholder="运动户外" title="运动户外" style="font-size: 20px;">运动户外</p>
                         </div>
                     </div>
@@ -216,19 +216,19 @@
                 <div class="row1 gy-4 aos-init aos-animate" style=" margin-bottom: 20px;">
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/床上用品.png" alt="" class="counts-img">
+                            <img src="./assets/img/床上用品.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key35" placeholder="床上用品" title="床上用品" style="font-size: 20px;">床上用品</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/宠物用品.png" alt="" class="counts-img">
+                            <img src="./assets/img/宠物用品.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key36" placeholder="宠物用品" title="宠物用品" style="font-size: 20px;">宠物用品</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 aos-init aos-animate" style="width: 33.333%;">
                         <div class="count-box1 count-height">
-                            <img src="./assets/办公学习.png" alt="" class="counts-img">
+                            <img src="./assets/img/办公学习.png" alt="" class="counts-img">
                             <p class="counts-p" data-i18n="key37" placeholder="办公学习" title="办公学习" style="font-size: 20px;">办公学习</p>
                         </div>
                     </div>
@@ -253,25 +253,25 @@
                         <p data-i18n="key38" placeholder="合作平台" title="合作平台">合作平台</p>
                     </header>
                     <div style="width: 100%;">
-                        <img src="./assets/eaby.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/amazon.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/walmart.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
-                        <img src="./assets/tiktok.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/wayfair.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/otto.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
-                        <img src="./assets/jobuy.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/lazada.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/smt.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
-                        <img src="./assets/shopee.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/shein.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/temu.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
-                        <img src="./assets/fruugo.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/lowes.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/独立站.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
-                        <img src="./assets/Cdiscount.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/homedepot.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
-                        <img src="./assets/overstock.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
-                        <img src="./assets/TOKOPEDIA.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/eaby.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/amazon.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/walmart.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
+                        <img src="./assets/img/tiktok.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/wayfair.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/otto.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
+                        <img src="./assets/img/jobuy.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/lazada.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/smt.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
+                        <img src="./assets/img/shopee.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/shein.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/temu.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
+                        <img src="./assets/img/fruugo.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/lowes.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/独立站.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
+                        <img src="./assets/img/Cdiscount.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/homedepot.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
+                        <img src="./assets/img/overstock.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;">
+                        <img src="./assets/img/TOKOPEDIA.png" class="img-fluid" alt="" style="width: 31%;box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);margin-bottom: 10px;margin-right: 2%;">
                     </div>
                 </div>
             </section>
